--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="price">₹120</div>
             </div>
             <div class="menu-item" data-category="indian" data-aos="zoom-in">
-                <img src="https://images.unsplash.com/photo-1506089676908-3592f7389d4d?auto=format&fit=crop&w=400&q=80" alt="Chai">
+                <img src="https://images.unsplash.com/photo-1506089676908-3592f7389d4d?auto=format&fit=crop&w=400&q=" alt="Chai">
                 <h3>Masala Chai</h3>
                 <p>Traditional Indian tea brewed with spices and milk.</p>
                 <div class="price">₹60</div>
